Wersja 0.7.9. Czytaj changes